syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";

message LoginRequest {
  google.protobuf.StringValue owner = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue password = 3;
}

message LoginResponse {
  google.protobuf.StringValue token = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue role = 3;
}

message User {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue password = 3;
  google.protobuf.StringValue owner = 4;
  google.protobuf.StringValue source = 5;
  google.protobuf.StringValue auth_token = 6;
  google.protobuf.BoolValue token_enable = 7;
  google.protobuf.StringValue comment = 8;
  google.protobuf.StringValue ctime = 9;
  google.protobuf.StringValue mtime = 10;
  google.protobuf.StringValue user_type = 11;
}

message UserToken {
  google.protobuf.StringValue user_id = 1;
  google.protobuf.StringValue auth_token = 2;
}

message UserGroupRelation {
  google.protobuf.StringValue group_id = 1;
  repeated google.protobuf.StringValue user_ids = 2;
}


message UserGroup {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue owner = 3;
  google.protobuf.StringValue auth_token = 4;
  google.protobuf.BoolValue token_enable = 5;
  google.protobuf.StringValue comment = 6;
  google.protobuf.StringValue ctime = 7;
  google.protobuf.StringValue mtime = 8;
  UserGroupRelation relation = 9;
}

message ModifyUserGroup {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue owner = 3;
  google.protobuf.StringValue auth_token = 4;
  google.protobuf.BoolValue token_enable = 5;
  google.protobuf.StringValue comment = 6;
  google.protobuf.StringValue ctime = 7;
  google.protobuf.StringValue mtime = 8;
  UserGroupRelation add_relation = 9;
  UserGroupRelation remove_relation = 10;
}

message Principal {
  repeated google.protobuf.StringValue users = 1;
  repeated google.protobuf.StringValue groups = 2;
}

message StrategyResource {
  google.protobuf.StringValue strategy_id = 1;
  repeated google.protobuf.StringValue namespaces = 2;
  repeated google.protobuf.StringValue services = 3;
  repeated google.protobuf.StringValue config_groups = 4;
}

enum AuthAction {
  ONLY_ERAD = 0;
  READ_WRITE = 1;
}

message AuthStrategy {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  Principal principal = 3;
  StrategyResource resource = 4;
  AuthAction action = 5;
  google.protobuf.StringValue comment = 6;
  google.protobuf.StringValue owner = 7;
  google.protobuf.StringValue ctime = 8;
  google.protobuf.StringValue mtime = 9;
  google.protobuf.StringValue auth_token = 10;
}

message ModifyAuthStrategy {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  Principal add_principal = 3;
  Principal remove_principal = 4;
  StrategyResource add_resource = 5;
  StrategyResource remove_resource = 6;
  AuthAction action = 7;
  google.protobuf.StringValue comment = 8;
  google.protobuf.StringValue owner = 9;
  google.protobuf.StringValue ctime = 10;
  google.protobuf.StringValue mtime = 11;
  google.protobuf.StringValue auth_token = 12;
}


enum ResourceType {
  Namespaces = 0;
  Services = 1;
  ConfigGroups = 2;
}
